[gd_scene load_steps=2 format=3 uid="uid://c0jlxjxdu4vma"]

[ext_resource type="Script" path="res://UI.gd" id="1_mphwc"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_mphwc")

[node name="Score_Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 32.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health_Label" type="Label" parent="."]
offset_left = 11.0
offset_right = 51.0
offset_bottom = 45.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32

[node name="High_Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -362.5
offset_right = 362.5
offset_bottom = 178.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "High Score: "

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Pause
"

[node name="Restart" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.5
offset_top = 227.5
offset_right = 334.5
offset_bottom = 372.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Restart Game"

[node name="PauseMenu" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DimOverlay" type="ColorRect" parent="PauseMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.427451)

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -140.0
offset_right = 104.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(104, 40)
theme_override_font_sizes/font_size = 52
text = "Resume"

[node name="ExitButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = 60.0
offset_right = 50.5
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 40)
theme_override_font_sizes/font_size = 52
text = "Exit"

[node name="Restart" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -40.0
offset_right = 175.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Restart Game"

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenu/Restart" to="." method="_on_restart_pressed"]
